--- a/challenge-1.ipynb
+++ b/challenge-1.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# no code needed"
+    "project=Project_lab"
    ]
   },
   {
@@ -56,9 +56,7 @@
    "id": "f578f4fa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# no code needed"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -75,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# no code needed"
+    "from getpass import getpass"
    ]
   },
   {
@@ -111,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
